--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,12 +39,15 @@ jobs:
           #sudo bash dl-k8s.sh "1.23.10"
           #sudo mv -f /tmp/*.tar* /tmp/.artifacts/
           
-          sudo bash dl-k8s.sh "1.24.4"
-          sudo mv -f /tmp/*.tar* /tmp/.artifacts/
+          #sudo bash dl-k8s.sh "1.24.4"
+          #sudo mv -f /tmp/*.tar* /tmp/.artifacts/
           
-          sudo bash dl-k8s.sh "1.25.2"
+          sudo bash dl-k8s.sh "1.25.6"
           sudo mv -f /tmp/*.tar* /tmp/.artifacts/
-          
+
+          sudo bash dl-k8s.sh "1.26.1"
+          sudo mv -f /tmp/*.tar* /tmp/.artifacts/
+
           sudo sleep 2
           sudo chmod 0644 /tmp/.artifacts/*.tar*
           exit
