--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,6 +104,7 @@ jobs:
           sudo apt install -y -qqq bash wget ca-certificates curl git
           sudo ln -svf bash /bin/sh
           sudo bash scripts/.pre.sh
+          sudo bash scripts/install_docker.sh
           sudo rm -fr /tmp/.artifacts
           sudo rm -fr /tmp/*
           sudo mkdir /tmp/.artifacts
