--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -132,7 +132,10 @@ jobs:
           sudo bash dl-k8s.sh "1.29.6"
           sudo mv -f /tmp/*.tar* /tmp/.artifacts/
 
-          sudo bash dl-k8s.sh "1.30.2"
+          sudo bash dl-k8s.sh "1.30.5"
+          sudo mv -f /tmp/*.tar* /tmp/.artifacts/
+
+          sudo bash dl-k8s.sh "1.31.1"
           sudo mv -f /tmp/*.tar* /tmp/.artifacts/
 
           sudo sleep 2
