--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -129,8 +129,8 @@ jobs:
           #sudo bash dl-k8s.sh "1.25.6"
           #sudo mv -f /tmp/*.tar* /tmp/.artifacts/
 
-          sudo bash dl-k8s.sh "1.29.6"
-          sudo mv -f /tmp/*.tar* /tmp/.artifacts/
+          #sudo bash dl-k8s.sh "1.29.6"
+          #sudo mv -f /tmp/*.tar* /tmp/.artifacts/
 
           sudo bash dl-k8s.sh "1.30.5"
           sudo mv -f /tmp/*.tar* /tmp/.artifacts/
