--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,41 +19,27 @@ jobs:
       - name: Package Docker and K8s
         run: |
           sudo apt update -y -qqq
+          sudo systemctl disable postgresql.service || true 
+          sudo systemctl disable mysql.service || true 
+          sudo systemctl disable mysqld.service || true 
+          sudo systemctl stop postgresql.service || true 
+          sudo systemctl stop mysql.service || true 
+          sudo systemctl stop mysqld.service || true 
           sudo apt autoremove --purge -y --allow-remove-essential $(dpkg -l | grep -i -E 'dotnet|microsoft|libmono|mono-|monodoc|powershell' | awk '{print $2}' | sort -V | uniq | paste -sd" ") || true 
-          sudo apt autoremove --purge -y google-chrome-stable || true 
-          sudo apt autoremove --purge -y google-cloud-sdk || true 
+          sudo apt autoremove --purge -y --allow-remove-essential $(dpkg -l | grep -i -E 'firefox|firebird|google-chrome-stable' | awk '{print $2}' | sort -V | uniq | paste -sd" ") || true 
+          sudo apt autoremove --purge -y --allow-remove-essential $(dpkg -l | awk '$2 ~ /mysql|postgresql|google-cloud|mssql|msbuild|msodbcsql|^llvm-|^php[1-9]/ {print $2}' |  grep -iv libmysqlclient | sort -V | uniq | paste -sd" ") || true 
           sudo apt autoremove --purge -y libmspack0 || true 
           sudo apt autoremove --purge -y libpq5 || true 
           sudo apt autoremove --purge -y libpq-dev || true 
           sudo apt autoremove --purge -y libsybdb5 || true 
           sudo apt autoremove --purge -y libz3-4 || true 
           sudo apt autoremove --purge -y libz3-dev || true 
-          sudo apt autoremove --purge -y microsoft-edge-stable || true 
-          sudo apt autoremove --purge -y mono-roslyn || true 
-          sudo apt autoremove --purge -y msodbcsql17 || true 
-          sudo apt autoremove --purge -y mssql-tools || true 
-          sudo apt autoremove --purge -y mysql-client || true 
-          sudo apt autoremove --purge -y mysql-client-8.0 || true 
-          sudo apt autoremove --purge -y mysql-client-core-8.0 || true 
-          sudo apt autoremove --purge -y mysql-common || true 
-          sudo apt autoremove --purge -y mysql-server || true 
-          sudo apt autoremove --purge -y mysql-server-8.0 || true 
-          sudo apt autoremove --purge -y mysql-server-core-8.0 || true 
           sudo apt autoremove --purge -y nginx || true 
           sudo apt autoremove --purge -y nginx-common || true 
           sudo apt autoremove --purge -y packages-microsoft-prod || true 
-          sudo apt autoremove --purge -y php8.1-mysql || true 
-          sudo apt autoremove --purge -y php8.1-pgsql || true 
-          sudo apt autoremove --purge -y php8.1-sqlite3 || true 
-          sudo apt autoremove --purge -y postgresql-14 || true 
-          sudo apt autoremove --purge -y postgresql-client-14 || true 
-          sudo apt autoremove --purge -y postgresql-client-common || true 
-          sudo apt autoremove --purge -y postgresql-common || true 
           sudo apt autoremove --purge -y powermgmt-base || true 
-          sudo apt autoremove --purge -y powershell || true 
           sudo apt autoremove --purge -y python3-configobj || true 
           sudo apt autoremove --purge -y shim-signed || true 
-          sudo apt autoremove --purge -y firefox || true 
           sudo /bin/rm -fr /var/lib/postgresql /var/lib/mysql
           sudo /bin/rm -fr /usr/share/sbt
           sudo /bin/rm -fr /usr/share/gradle*
@@ -61,7 +47,6 @@ jobs:
           sudo /bin/rm -fr /usr/share/az_*
           sudo /bin/rm -fr /usr/share/swift*
           sudo /bin/rm -fr /usr/share/dotnet*
-          sudo /bin/rm -fr /usr/lib/snapd
           sudo /bin/rm -fr /usr/lib/firefox
           sudo /bin/rm -fr /usr/lib/llvm*
           sudo /bin/rm -fr /usr/lib/mono
