--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,8 @@ jobs:
 
       - name: Generate release tag env
         run: |
-          echo "_dateutc=$(date -u +%Y-%m-%d)" >> $GITHUB_ENV
+          _release_ver="v$(date -u +%Y-%m-%d)"
+          echo "_release_ver=${_release_ver}" >> $GITHUB_ENV
 
       - name: Package K8s 1.30
         run: |
@@ -45,7 +46,7 @@ jobs:
       - name: Upload files
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ env._dateutc }}
+          tag_name: ${{ env._release_ver }}
           files: /tmp/.artifacts/*.tar*
 
       - name: Package K8s 1.31
@@ -59,9 +60,9 @@ jobs:
       - name: Upload files
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ env._dateutc }}
+          tag_name: ${{ env._release_ver }}
           files: /tmp/.artifacts/*.tar*
 
       - name: Delete old release tag env
         run: |
-          sed -e "/^_dateutc=/d" -i $GITHUB_ENV
+          sed -e "/^_release_ver=/d" -i $GITHUB_ENV
