--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
           sudo /bin/rm -fr /tmp/.artifacts
           sudo /bin/rm -fr /tmp/*
           sudo mkdir /tmp/.artifacts
-          sudo bash dl-k8s.sh "1.31.5"
+          sudo bash dl-k8s.sh "1.31.9"
           sudo mv -f /tmp/*.tar* /tmp/.artifacts/
           sudo chmod 0644 /tmp/.artifacts/*.tar*
       - name: Upload files
@@ -54,7 +54,21 @@ jobs:
           sudo /bin/rm -fr /tmp/.artifacts
           sudo /bin/rm -fr /tmp/*
           sudo mkdir /tmp/.artifacts
-          sudo bash dl-k8s.sh "1.32.1"
+          sudo bash dl-k8s.sh "1.32.5"
+          sudo mv -f /tmp/*.tar* /tmp/.artifacts/
+          sudo chmod 0644 /tmp/.artifacts/*.tar*
+      - name: Upload files
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ env._release_ver }}
+          files: /tmp/.artifacts/*.tar*
+
+      - name: Package K8s 1.33
+        run: |
+          sudo /bin/rm -fr /tmp/.artifacts
+          sudo /bin/rm -fr /tmp/*
+          sudo mkdir /tmp/.artifacts
+          sudo bash dl-k8s.sh "1.33.1"
           sudo mv -f /tmp/*.tar* /tmp/.artifacts/
           sudo chmod 0644 /tmp/.artifacts/*.tar*
       - name: Upload files
